<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_11sdp">

    <FrameLayout
        android:id="@+id/fragment_passwordreset"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_191sdp"
            android:autofillHints=""
            android:hint="@string/wachtwoord"
            android:inputType="textPassword"
            android:minHeight="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_230sdp"
            android:autofillHints=""
            android:hint="@string/herhaal_wachtwoord"
            android:inputType="textPassword"
            android:minHeight="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_152sdp"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/_40sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPasswordReset"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_320sdp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/houseStyleColor"
            android:text="@string/verzenden"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.139"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>