<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_11sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_214sdp"
            android:autofillHints=""
            android:hint="@string/wachtwoord1"
            android:inputType="textPassword"
            android:minHeight="@dimen/_36sdp"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_180sdp"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/_36sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        inlog button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_280sdp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/houseStyleColor"
            android:text="@string/inloggen"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.008"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Wachtwoord vergeten button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPasswordReset"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_43sdp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/houseStyleColor"
            android:onClick="openPasswordResetFragment"
            android:text="wachtwoord vergeten"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />


        <!--        Account aanmaken button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_90sdp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/houseStyleColor"
            android:onClick="openSignUpActivity"
            android:text="nieuw account aanmaken"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <!-- FrameLayout for PasswordResetFragment -->
        <FrameLayout
            android:id="@+id/fragment_passwordreset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
